[gd_scene load_steps=10 format=3 uid="uid://bvtnnx2mk6odk"]

[ext_resource type="Script" uid="uid://4s8hd2gjx64i" path="res://Panels/FilePanel/file_panel.gd" id="1_6ahnf"]
[ext_resource type="FontFile" uid="uid://brrvdl85srjkn" path="res://GNF.ttf" id="1_bgygx"]
[ext_resource type="Script" uid="uid://clsgrvyxbvsnm" path="res://Panels/FilePanel/file_panel_button.gd" id="3_1c3fl"]
[ext_resource type="Script" uid="uid://bcumjt67d2gcu" path="res://Panels/FilePanel/file_name.gd" id="3_m4vra"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qu7ik"]
bg_color = Color(0.14117648, 0.12941177, 0.20392157, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.9137255, 0.5529412, 0.19215687, 1)

[sub_resource type="LabelSettings" id="LabelSettings_qkdc4"]
font = ExtResource("1_bgygx")
font_size = 18

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0a6vw"]
bg_color = Color(0.14117648, 0.12941177, 0.20392157, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.9137255, 0.5529412, 0.19215687, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qkdc4"]
bg_color = Color(0.097919665, 0.08869148, 0.14703268, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.7512551, 0.43661377, 0.096929185, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mf2r8"]
bg_color = Color(0.22191975, 0.20562848, 0.30936426, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.9698376, 0.6344879, 0.33084765, 1)

[node name="FilePanel" type="PanelContainer"]
custom_minimum_size = Vector2(220, 75)
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_qu7ik")
script = ExtResource("1_6ahnf")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="FileName" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
tooltip_text = "[filename]"
mouse_filter = 1
text = "[filename]"
label_settings = SubResource("LabelSettings_qkdc4")
horizontal_alignment = 1
text_overrun_behavior = 3
script = ExtResource("3_m4vra")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Open" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Open File"
focus_mode = 0
theme_override_fonts/font = ExtResource("1_bgygx")
theme_override_styles/normal = SubResource("StyleBoxFlat_0a6vw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qkdc4")
theme_override_styles/hover = SubResource("StyleBoxFlat_mf2r8")
theme_override_styles/focus = SubResource("StyleBoxFlat_0a6vw")
text = "[ O ]"
script = ExtResource("3_1c3fl")

[node name="Rename" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Rename File"
focus_mode = 0
theme_override_fonts/font = ExtResource("1_bgygx")
theme_override_styles/normal = SubResource("StyleBoxFlat_0a6vw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qkdc4")
theme_override_styles/hover = SubResource("StyleBoxFlat_mf2r8")
theme_override_styles/focus = SubResource("StyleBoxFlat_0a6vw")
disabled = true
text = "[ I ]"
script = ExtResource("3_1c3fl")

[node name="Favorite" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Favorite File"
focus_mode = 0
theme_override_fonts/font = ExtResource("1_bgygx")
theme_override_styles/normal = SubResource("StyleBoxFlat_0a6vw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qkdc4")
theme_override_styles/hover = SubResource("StyleBoxFlat_mf2r8")
theme_override_styles/focus = SubResource("StyleBoxFlat_0a6vw")
text = "[ F ]"
script = ExtResource("3_1c3fl")

[node name="Delete" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Delete File"
focus_mode = 0
theme_override_fonts/font = ExtResource("1_bgygx")
theme_override_styles/normal = SubResource("StyleBoxFlat_0a6vw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qkdc4")
theme_override_styles/hover = SubResource("StyleBoxFlat_mf2r8")
theme_override_styles/focus = SubResource("StyleBoxFlat_0a6vw")
disabled = true
text = "[ X ]"
script = ExtResource("3_1c3fl")

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Open" to="." method="_on_open_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Rename" to="." method="_on_rename_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Favorite" to="." method="_on_favorite_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Delete" to="." method="_on_delete_pressed"]
